# second-brain

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 1eaa459be543_initial_schema.py  a2b3c4d5e6f7_telegram_to_slack.py  e8ca441b39d3_personality_config.py
docs/: pinecone-migration-evaluation.md
requirements/: initial-requirements.md  slack-conversation-history.md
src/second_brain/: __init__.py  config.py  logging_setup.py  main.py
src/second_brain/bot/: app.py  formatting.py  history.py  pipeline.py
src/second_brain/bot/handlers/: callbacks.py  (+3 more)
src/second_brain/models/: __init__.py  base.py  calendar_event.py  config.py  entity.py  entity_merge.py  entry.py  nudge.py  relation.py  tag.py
src/second_brain/prompts/: connection_scoring.py  daily_summary.py  enrichment.py  meeting_brief.py  nudge_parsing.py  pattern_detection.py  personality.py  query_simple.py  query_synthesis.py  scheduler_reasoning.py
src/second_brain/services/: anthropic_client.py  calendar_sync.py  connection_scoring.py  enrichment.py  entity_resolution.py  meeting_brief.py  nudge_manager.py  pattern_detection.py  personality.py  query_engine.py  query_session.py  retry_manager.py  scheduler.py  whisper_client.py
src/second_brain/utils/: fts.py  fuzzy_match.py  tags.py  time.py
tests/: conftest.py
tests/integration/: test_capture_pipeline.py  test_error_handling.py  test_query_pipeline.py  test_voice_pipeline.py
tests/unit/: test_calendar.py  test_config.py  test_connection_scoring.py  test_enrichment.py  test_entity_resolution.py  test_fts.py  test_fuzzy_match.py  test_history.py  test_nudge.py  test_query.py  test_query_session.py  test_scheduler.py  test_whisper.py
