[project]
name = "second-brain"
version = "0.1.0"
description = "AI-powered personal knowledge management via Slack"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18",
    "slack-sdk>=3.27",
    "aiohttp>=3.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "pydantic>=2.0",
    "thefuzz>=0.22",
    "python-Levenshtein>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
